# ChangeLog for dev-ruby/hoe
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.49 2009/04/22 10:01:53 graaff Exp $

  22 Apr 2009; Hans de Graaff <graaff@gentoo.org> hoe-1.11.0.ebuild:
  hoe 1.11.0 requires rake 0.8.4 or higher.

*hoe-1.11.0 (27 Mar 2009)

  27 Mar 2009; Hans de Graaff <graaff@gentoo.org> +hoe-1.11.0.ebuild:
  Version bump

*hoe-1.8.3 (24 Jan 2009)

  24 Jan 2009; Hans de Graaff <graaff@gentoo.org> +hoe-1.8.3.ebuild:
  Version bump

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> hoe-1.8.2.ebuild:
  ia64 stable wrt #250348

  20 Dec 2008; Markus Meier <maekke@gentoo.org> hoe-1.8.2.ebuild:
  amd64/x86 stable, bug #250348

  14 Dec 2008; nixnut <nixnut@gentoo.org> hoe-1.8.2.ebuild:
  Stable on ppc wrt bug 250348

  12 Dec 2008; Hans de Graaff <graaff@gentoo.org> -hoe-1.4.0.ebuild,
  -hoe-1.5.3.ebuild, -hoe-1.6.0.ebuild, -hoe-1.7.0.ebuild,
  -hoe-1.8.0.ebuild:
  Remove old versions

  10 Dec 2008; Ferris McCormick <fmccor@gentoo.org> hoe-1.8.2.ebuild:
  Sparc stable, part of Bug #250348.

  09 Dec 2008; Brent Baude <ranger@gentoo.org> hoe-1.8.2.ebuild:
  Marking hoe-1.8.2 ppc64 for bug 250348

  18 Nov 2008; Hans de Graaff <graaff@gentoo.org> hoe-1.8.2.ebuild:
  Has been tested for Ruby 1.9 compatibility in the overlay.

*hoe-1.8.2 (25 Oct 2008)

  25 Oct 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.8.2.ebuild:
  Version bump

*hoe-1.8.0 (14 Oct 2008)

  14 Oct 2008; Hans de Graaff <graaff@gentoo.org> +hoe-1.8.0.ebuild:
  Version bump with 5 minor enhancements.

  03 Sep 2008; Hans de Graaff <graaff@gentoo.org> hoe-1.7.0.ebuild:
  Depend on rubygems 1.2.0 since the generated tasks depend on it. Thanks to
  Cyril Mougel for providing the information in #236444.

  08 Jul 2008; Javier Villavicencio <the_paya@gentoo.org> hoe-1.7.0.ebuild:
  Add ~x86-fbsd.

  07 Jul 2008; Friedrich Oslage <bluebird@gentoo.org> hoe-1.7.0.ebuild:
  Add ~sparc keyword, bug #230517
