@@ -1,10 +1,10 @@
 DIST hoe-1.11.0.gem 25600 RMD160 583687e512dc8ab3e0b1817e7e70d25f94aa3b04 SHA1 aa3937f28b430b5cbaf69e05306f2756c11f5884 SHA256 ec2a35ea57ca913b4fc469d20c71f09d12ece585a1e2c02a4d5f3246c8883273
-DIST hoe-1.5.1.gem 16384 RMD160 f5ec2b2580d051c99907194a80ed876b140eabd6 SHA1 5f147e5b098f1615d387c8c4ebe68ee740d30a8e SHA256 d052cb02b809f45112dca3804f77d66328229615a3f718fa4b25cc893b4e9c4f
+DIST hoe-1.12.2.gem 26112 RMD160 cd256ea2d7cd53ecca27593d3a24b925af8804e8 SHA1 73dd239674b3681d73b54f61870c54b01f47e8a6 SHA256 80c46632497aee09fe1fded8c21092d1e57883bf1db67122d746e4562cf46c3f
 DIST hoe-1.8.2.gem 19456 RMD160 9e51fce1037455c0cf1217e44bde9bcb6dc7d9b0 SHA1 8917395982e94d5dc4a8dfd21c4128b7b4d5a71b SHA256 34ccfdd9ee17e199fafcfcfe308d781487afff8202cfd64dfc010b1ad4b67ef4
 DIST hoe-1.8.3.gem 19456 RMD160 484aa422caa3b6d916bf2f189c213e337978c417 SHA1 e425ff1dbd68a111ad619f86ab12e60a6f5ec92c SHA256 53d565d00ca8882b63c414b6f027dc5938e3492e1c72f4c3b342e841254fdf86
 EBUILD hoe-1.11.0.ebuild 552 RMD160 cd64102e994c7c8172b1a2676e8e23aff158bafb SHA1 092ce5841e6ab02df585f7d5ce9b259b3127a404 SHA256 b58e32c74a18667fa0527c73df92e1056f5fb98da96e5258568f3293adf0f2f7
-EBUILD hoe-1.5.1.ebuild 499 RMD160 fb2a997384f43aebbb2a11540cc355916786c80e SHA1 87f871bcbbb6ac54e302f030d5346988b42861d2 SHA256 4918b769ada10f24184581ce98f54c4879a2277eb2badb1e84065c9ec47f08e9
+EBUILD hoe-1.12.2.ebuild 570 RMD160 4d2ef97d867ab49da709b73df7afb3ce2988f709 SHA1 08e229be3e067bbfbcaad63ead3a47488e445a16 SHA256 afdacc2142a0c3791507d9f0f9d601df7162871ba9747e0c055b696dd19f8924
 EBUILD hoe-1.8.2.ebuild 552 RMD160 1246f2e6894c20475ba79ab32309f8bb04456e27 SHA1 7d45f7bd1e79c92ce42c8d2e7f780548ec730b56 SHA256 38e6582d9ce39950137d26de449f4021c08dff64cb892816961132fa2a873ba3
 EBUILD hoe-1.8.3.ebuild 551 RMD160 9d303abc9da217482b2731b6c9f7381e429f4ac3 SHA1 7a015139ce38d37f438fa72078547dab33ea2cb4 SHA256 3e027519cb93aeeefb17e56c4de6c70ac9ef4b867b0d82877efc812b06dd44c6
-MISC ChangeLog 6244 RMD160 532343a3bc75ef30c39c84d0c417056214ab7e68 SHA1 37fb459e412ee1c57bb7230eb34a89f5caee4f49 SHA256 63557c026304150532ebe92a1e4e039a98179bbbf22534162d284a92c63edf5b
+MISC ChangeLog 6398 RMD160 1822f47da6d9c64e8fa7d843e23b6f56c28bc329 SHA1 5f216c5074c2c769b74f123219befe8345ca051c SHA256 09aac7bf3817c6656965aca554f250c4d74d652c5507356b85149c8a00f9f651
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
