@@ -1,8 +1,10 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/hoe-1.5.1.ebuild,v 1.6 2008/04/17 10:56:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/hoe-1.12.2.ebuild,v 1.1 2009/05/10 18:27:47 a3li Exp $
 
 inherit gems
+
+USE_RUBY="ruby18 ruby19"
 
 DESCRIPTION="Hoe extends rake to provide full project automation."
 HOMEPAGE="http://seattlerb.rubyforge.org/"
@@ -12,5 +14,7 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE=""
 
-DEPEND=">=dev-ruby/rake-0.8.1
-	>=dev-ruby/rubyforge-0.4.4"
+DEPEND=">=dev-ruby/rake-0.8.4
+	>=dev-ruby/rubyforge-1.0.3
+	>=dev-ruby/rubygems-1.2.0"
+RDEPEND="${DEPEND}"
