@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/hoe
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.49 2009/04/22 10:01:53 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.50 2009/05/10 18:27:47 a3li Exp $
+
+*hoe-1.12.2 (10 May 2009)
+
+  10 May 2009; Alex Legler <a3li@gentoo.org> -hoe-1.5.1.ebuild,
+  +hoe-1.12.2.ebuild:
+  Version bump, deleting one old version.
 
   22 Apr 2009; Hans de Graaff <graaff@gentoo.org> hoe-1.11.0.ebuild:
   hoe 1.11.0 requires rake 0.8.4 or higher.
